[package]
name = "shm_runer"
version = "0.1.0"
edition = "2021"

[dependencies]
libloading = "0.7.0"
shared_memory = "0.12.4"
libc = "0.2.107"
log = "0.4.14"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.8"
tonic = "0.5"

[build-dependencies]
tonic-build = "0.5"